# agent-based-sim

./: .gitignore  Cargo.toml  FEATURE_PLAN.md  GITHUB_SETUP.md  PROJECT_PLAN.md  PUSH_TO_GITHUB.md  README.md  quick_setup.sh  setup_git.sh
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  SIMULATION_MODEL.md  USER_GUIDE.md
examples/: basic_simulation.rs  custom_rules.rs
src/: lib.rs  main.rs
src/config/: mod.rs  parameters.rs
src/simulation/: agent.rs  mod.rs  predator.rs  prey.rs  rules.rs  world.rs
src/ui/: controls.rs  layout.rs  mod.rs  statistics.rs  visualization.rs
src/utils/: color.rs  math.rs  mod.rs
tests/: agent_tests.rs  color_tests.rs  integration_tests.rs  math_tests.rs  parameters_tests.rs  predator_tests.rs  prey_tests.rs  simulation_tests.rs  spawn_tests.rs  torus_tests.rs  world_tests.rs
