[package]
name = "predator-prey-sim"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An educational agent-based predator-prey simulation with GUI"
license = "MIT OR Apache-2.0"
repository = ""

[dependencies]
egui = "0.24"
eframe = "0.24"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "basic_simulation"
path = "examples/basic_simulation.rs"

[[example]]
name = "custom_rules"
path = "examples/custom_rules.rs"
